<resources>
    <string name="app_name">UniPlus</string>
<<<<<<< HEAD
=======
    <string name="nombre">Nombre</string>
    <string name="universidad">Universidad</string>
    <string name="contra">*********</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nusuario_example_com">nusuario@example.com</string>
    <string name="correo">Correo</string>
    <string name="nombreusuario">NombreUsuario</string>
    <string name="nombreuni">NombreUni</string>
>>>>>>> origin
</resources>